# workshop-sample

./: main.py  pyproject.toml  requirements.txt
.github/skills/po-bugs/: SKILL.md
.github/skills/po-context/: SKILL.md
.github/skills/po-deps/: SKILL.md
.github/skills/po-docs/: SKILL.md
.github/skills/po-explain/: SKILL.md
.github/skills/po-health/: SKILL.md
.github/skills/po-onboard/: SKILL.md
.github/skills/po-refactor/: SKILL.md
.github/skills/po-security/: SKILL.md
.github/skills/po-story/: SKILL.md
.github/skills/po-story-rewrite/: SKILL.md
.github/skills/po-story/references/: self-critique-checklist.md
.github/skills/po-test/: SKILL.md
.github/skills/po-trend/: SKILL.md
.github/skills/po-verify/: SKILL.md
.github/workflows/: ci.yml
input_folder/: Evaluating RAG applications with Amazon Bedrock knowledge base evaluation.md  Evaluation Metrics for Retrieval-Augmented Generation (RAG) Systems.md  Evaluation Metrics in Machine Learning.md  Event-driven architecture The backbone of serverless AI - AWS Prescriptive Guidance.md  GENCOST04-BP01 Reduce vector length on embedded tokens - Generative AI Lens.md
output/: embeddings.jsonl  mock_vector_store.jsonl
rag_pipeline/: app.py  chunking.py  cli.py  constants.py  embeddings.py  file_ops.py  mock_store.py  models.py  records.py
tests/: test_chunking_and_records.py  test_cli.py  test_file_ops.py  test_mock_store.py
